--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+      <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+      <dependency>
+        <groupId>org.modelmapper</groupId>
+        <artifactId>modelmapper</artifactId>
+        <version>3.1.0</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.modelmapper.extensions/modelmapper-spring -->
+      <dependency>
+        <groupId>org.modelmapper.extensions</groupId>
+        <artifactId>modelmapper-spring</artifactId>
+        <version>3.1.0</version>
+      </dependency>
+
     </dependencies>
 
     <build>
