--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# DataSource Configuration Properties
+
+spring.datasource.url=jdbc:mysql://localhost:3306/lc?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+spring.datasource.username=root
+spring.datasource.password=12345678
+
+# Hibernate Configuration
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Hibernate SQL Logging
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type = TRACE
+
+# Error Stacktrace
+server.error.include-stacktrace=never
+server.error.include-message=always
 
