feat(criteria): Added Nested Resource Inbound service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ logging.level.org.hibernate.type = TRACE
 server.error.include-stacktrace=never
 server.error.include-message=always
 
+# Configure Port
+server.port=8090
+
+
