--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,27 @@
         <artifactId>modelmapper-spring</artifactId>
         <version>3.1.0</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+      <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-java</artifactId>
+        <version>7.3.4</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+      <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-junit</artifactId>
+        <version>7.3.4</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-spring -->
+      <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-spring</artifactId>
+        <version>7.3.4</version>
+        <scope>test</scope>
+      </dependency>
 
     </dependencies>
 
