doc: Added OpenAPI documentation configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,18 @@
         <version>7.3.4</version>
         <scope>test</scope>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+      <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-ui</artifactId>
+        <version>1.6.9</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-data-rest -->
+      <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-data-rest</artifactId>
+        <version>1.6.9</version>
+      </dependency>
 
     </dependencies>
 
