--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,9 @@ server.error.include-message=always
 # Configure Port
 server.port=8090
 
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=alpha
+
+
 
