feat(security): Added Spring Boot Security and JSON Web Token management dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,17 @@
         <artifactId>springdoc-openapi-data-rest</artifactId>
         <version>1.6.9</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt</artifactId>
+        <version>0.9.1</version>
+      </dependency>
 
     </dependencies>
 
