feat(security): Added Secret and Token Generation configuration parameters.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,11 @@ server.port=8090
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operations-sorter=alpha
 
+# JWT Configuration Properties
+authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.expiration.days = 7
+
+# Allow Bean dependencies
+spring.main.allow-circular-references=true
 
 
