--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DataSource Configuration Properties
 
-spring.datasource.url=jdbc:mysql://localhost:3306/lc?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/lc?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
 spring.datasource.username=root
 spring.datasource.password=12345678
 
